--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+
 # Build and Release Folders
 bin-debug/
 bin-release/
@@ -16,3 +17,4 @@ bin-release/
 # Project files, i.e. `.project`, `.actionScriptProperties` and `.flexProperties`
 # should NOT be excluded as they contain compiler settings and other important
 # information for Eclipse / Flash Builder.
+node_modules
